<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/container"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:paddingTop="12dp"
	android:paddingBottom="12dp"
	android:paddingRight="12dp"
	android:paddingLeft="12dp"
	tools:context="kiwi.mobile.project.ControlActivity">

	<TableRow>
		<TextView
			android:id="@+id/label_door"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/label_door"
			android:textStyle="bold"
			android:textSize="14sp"/>
		<Space
			android:layout_width="5dp"/>
		<TextView
			android:id="@+id/view_door"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/field_door_default"
			android:textSize="14sp"/>
	</TableRow>

	<TableRow>
		<TextView
			android:id="@+id/label_status"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/label_status"
			android:textStyle="bold"
			android:textSize="14sp"/>
		<Space
			android:layout_width="5dp"/>
		<TextView
			android:id="@+id/view_status"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/field_status_default"
			android:textSize="14sp"/>
	</TableRow>

	<Space
		android:layout_height="10dp"/>

	<TextView
		android:id="@+id/label_log"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/label_log"
		android:textStyle="bold"
		android:textSize="14sp"/>

	<TextView
		android:id="@+id/log_view"
		android:freezesText="true"
		android:layout_height="0dp"
		android:layout_width="fill_parent"
		android:layout_marginTop="4dp"
		android:layout_marginBottom="4dp"
		android:layout_gravity="top|left"
		android:layout_weight="1"
		android:maxLines="10000"
		android:scrollbars="vertical"
		android:text="@string/log_started"
		android:textSize="14sp"/>

	<Button
		android:id="@+id/connect_button"
		android:text="@string/connect"/>
	<Button
		android:id="@+id/relay_button"
		android:text="@string/start_relay"/>

</TableLayout>
